// Code generated by furo-proto-gen. DO NOT EDIT.

syntax = "proto3";
package personservice;



import "google/api/annotations.proto";

import "person/person.proto";
import "google/protobuf/empty.proto";



// service specs for the person api
service PersonService {                       
   
    // Creates a new Person
    rpc CreatePerson (CreatePersonServiceRequest) returns (person.PersonEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/persons/create.json"
            
        };
    }   
    // Delete a Person
    rpc DeletePerson (DeletePersonServiceRequest) returns (google.protobuf.Empty){
        //
        option (google.api.http) = {
            get: "/mockdata/persons/{prs}/delete.json"
            
        };
    }   
    // The Get method takes zero or more parameters, and returns a PersonEntity which contains a Person
    rpc GetPerson (GetPersonServiceRequest) returns (person.PersonEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/persons/{prs}/get.json"
        };
    }   
    // The List method takes zero or more parameters as input, and returns a PersonCollection of PersonEntity that match the input parameters.
    rpc ListPersons (ListPersonServiceRequest) returns (person.PersonCollection){
        //Describe_the_query_params_if_you_have
        option (google.api.http) = {
            get: "/mockdata/persons/list.json"
        };
    }   
    // Updates a Person, partial updates are supported
    rpc UpdatePerson (UpdatePersonServiceRequest) returns (person.PersonEntity){
        //
        option (google.api.http) = {
            patch: "/mockdata/persons/{prs}/update.json"
            body: "data"
        };
    }
}


   
message CreatePersonServiceRequest { 
    
    person.Person data =  1;  
}

   
message DeletePersonServiceRequest { 
    
    string prs = 1;
    google.protobuf.Empty data =  2;  
}

   
message GetPersonServiceRequest { 
    
    string prs = 1; 
}

   
message ListPersonServiceRequest { 
    
    //Partial representation, fields=id,name
    string fields = 1;
    /**
     * Sort fields, comma separated list for the ordering
     * use **?filter=-display_name** with a dash to sort descending
     * use **?filter=display_name** to sort ascending
     */
    string order_by = 2;
    //Filter
    string filter = 3;
    //Page number for paginated content. Tipp: follow the HATEOAS next, prev,...
    int32 page = 4;
    //Number of elements to return per page
    int32 limit = 5;
    //https://cloud.google.com/apis/design/design_patterns#resource_view
    string view = 8;       
       
    //Query term to search a person
    string q = 11;
}

   
message UpdatePersonServiceRequest { 
    
    string prs = 1;
    person.Person data =  2;  
}



