// Code generated by furo-proto-gen. DO NOT EDIT.

syntax = "proto3";
package projectservice;



import "google/api/annotations.proto";

import "project/project.proto";
import "google/protobuf/empty.proto";



// service specs for the project api
service ProjectService {                       
   
    // Creates a new Project
    rpc CreateProject (CreateProjectServiceRequest) returns (project.ProjectEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/projects/create.json"
            
        };
    }   
    // Delete a Project
    rpc DeleteProject (DeleteProjectServiceRequest) returns (google.protobuf.Empty){
        //
        option (google.api.http) = {
            get: "/mockdata/projects/{prj}/delete.json"
            
        };
    }   
    // The Get method takes zero or more parameters, and returns a ProjectEntity which contains a Project
    rpc GetProject (GetProjectServiceRequest) returns (project.ProjectEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/projects/{prj}/get.json"
        };
    }   
    // The List method takes zero or more parameters as input, and returns a ProjectCollection of ProjectEntity that match the input parameters.
    rpc ListProjects (ListProjectServiceRequest) returns (project.ProjectCollection){
        //Describe_the_query_params_if_you_have
        option (google.api.http) = {
            get: "/mockdata/projects/list.json"
        };
    }   
    // Updates a Project, partial updates are supported
    rpc UpdateProject (UpdateProjectServiceRequest) returns (project.ProjectEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/projects/{prj}/update.json"
            
        };
    }
}


   
message CreateProjectServiceRequest { 
    
    project.Project data =  1;  
}

   
message DeleteProjectServiceRequest { 
    
    string prj = 1;
    google.protobuf.Empty data =  2;  
}

   
message GetProjectServiceRequest { 
    
    string prj = 1; 
}

   
message ListProjectServiceRequest { 
    
    //Partial representation, fields=id,name
    string fields = 1;
    /**
     * Sort fields, comma separated list for the ordering
     * use **?filter=-display_name** with a dash to sort descending
     * use **?filter=display_name** to sort ascending
     */
    string order_by = 2;
    //Filter
    string filter = 3;
    //Page number for paginated content. Tipp: follow the HATEOAS next, prev,...
    int32 page = 4;
    //Number of elements to return per page
    int32 limit = 5;
    //https://cloud.google.com/apis/design/design_patterns#resource_view
    string view = 8;       
       
    //Query term to search a project
    string q = 11;
}

   
message UpdateProjectServiceRequest { 
    
    string prj = 1;
    project.Project data =  2;  
}



