// Code generated by furo-proto-gen. DO NOT EDIT.

syntax = "proto3";
package taskservice;



import "google/api/annotations.proto";

import "task/task.proto";
import "google/protobuf/empty.proto";



// service specs for the task api
service TaskService {                       
   
    // Creates a new Task
    rpc CreateTask (CreateTaskServiceRequest) returns (task.TaskEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/tasks/create.json"
            
        };
    }   
    // Delete a Task
    rpc DeleteTask (DeleteTaskServiceRequest) returns (google.protobuf.Empty){
        //
        option (google.api.http) = {
            get: "/mockdata/tasks/{tsk}/delete.json"
            
        };
    }   
    // The Get method takes zero or more parameters, and returns a TaskEntity which contains a Task
    rpc GetTask (GetTaskServiceRequest) returns (task.TaskEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/tasks/{tsk}/get.json"
        };
    }   
    // The List method takes zero or more parameters as input, and returns a TaskCollection of TaskEntity that match the input parameters.
    rpc ListTasks (ListTaskServiceRequest) returns (task.TaskCollection){
        //Describe_the_query_params_if_you_have
        option (google.api.http) = {
            get: "/mockdata/tasks/list.json"
        };
    }   
    // Updates a Task, partial updates are not supported
    rpc UpdateTask (UpdateTaskServiceRequest) returns (task.TaskEntity){
        //
        option (google.api.http) = {
            get: "/mockdata/tasks/{tsk}/update.json"
            
        };
    }
}


   
message CreateTaskServiceRequest { 
    
    task.Task data =  1;  
}

   
message DeleteTaskServiceRequest { 
    
    string tsk = 1;
    google.protobuf.Empty data =  2;  
}

   
message GetTaskServiceRequest { 
    
    string tsk = 1; 
}

   
message ListTaskServiceRequest { 
    
    //Partial representation, fields=id,name
    string fields = 1;
    /**
     * Sort fields, comma separated list for the ordering
     * use **?filter=-display_name** with a dash to sort descending
     * use **?filter=display_name** to sort ascending
     */
    string order_by = 2;
    //Filter
    string filter = 3;
    //Page number for paginated content. Tipp: follow the HATEOAS next, prev,...
    int32 page = 4;
    //Number of elements to return per page
    int32 limit = 5;
    //https://cloud.google.com/apis/design/design_patterns#resource_view
    string view = 8;       
       
    //Query term to search a task
    string q = 11;
}

   
message UpdateTaskServiceRequest { 
    
    string tsk = 1;
    task.Task data =  2;  
}



